[gd_scene load_steps=8 format=2]

[ext_resource path="res://Source/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Source/Items/Sprites/SmallHeart.png" type="Texture" id=2]
[ext_resource path="res://Source/HUD/PressStart2P.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=5]
size = 45
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 45
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 45
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -948.0
margin_right = 948.0
margin_bottom = 213.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 14.0
margin_top = 97.0
margin_right = 289.0
margin_bottom = 142.0

[node name="HeartImage" type="TextureRect" parent="Control/HBoxContainer"]
margin_left = -20.0
margin_top = -25.0
margin_right = 12.0
margin_bottom = 12.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 1 )
texture = ExtResource( 2 )
stretch_mode = 6

[node name="HeartsLabel" type="Label" parent="Control/HBoxContainer"]
margin_left = 36.0
margin_right = 175.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 5 )
text = "-00"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
margin_left = 292.0
margin_top = 97.0
margin_right = 713.0
margin_bottom = 142.0

[node name="HealthLabel" type="Label" parent="Control/HBoxContainer2"]
margin_right = 421.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "HEALTH 00"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control"]
margin_left = 5.0
margin_top = 35.0
margin_right = 731.0
margin_bottom = 85.0

[node name="ScoreLabel" type="Label" parent="Control/HBoxContainer3"]
margin_top = 2.0
margin_right = 562.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "SCORE-000000"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control"]
pause_mode = 2
margin_left = 758.0
margin_top = 35.0
margin_right = 1251.0
margin_bottom = 88.0

[node name="TimerLabel" type="Label" parent="Control/HBoxContainer4"]
margin_top = 4.0
margin_right = 421.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "TIME 0300"

[node name="Timer" type="Timer" parent="Control/HBoxContainer4"]
autostart = true

[node name="HBoxContainer5" type="HBoxContainer" parent="Control"]
margin_left = 1428.0
margin_top = 35.0
margin_right = 1894.0
margin_bottom = 85.0

[node name="StageLabel" type="Label" parent="Control/HBoxContainer5"]
margin_top = 2.0
margin_right = 374.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "STAGE 01"

[connection signal="timeout" from="Control/HBoxContainer4/Timer" to="." method="_on_Timer_timeout"]
